# Audiogram-app

./: .gitattributes  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.cnn  Procfile  README.md  app.py  app_cnn.py  audiogram 1.1.ipynb  audiogram.ipynb  audiogram_severity_inceptionresnetv2.keras  audiogram_severity_model1.2.keras  audiogram_severity_model1.2_backup.keras  best_model.keras  class_indices.json  hybrid.ipynb  method2.ipynb  pyproject.toml  railway-cnn.toml  railway.toml  requirements.txt
hybrid_model_artifacts/: confusion_matrix.csv  meta.json
hybrid_model_artifacts_v2/: classification_report.txt  hybrid_svm.joblib  label_encoder.joblib  meta.json
ml_threshold_model/: label_encoder.joblib  meta.json  svm_model.joblib
